--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test-payment": "node tools/test-autonomous-payment.mjs"
   },
   "dependencies": {
     "axios": "^1.6.2",
